1.1.10:
	Add a config option to suprress the X-Greylist header
1.1.9:
	Build problems on some Linux systems
1.1.8:
	Build again on Tru64 Unix and Darwin
	Use regex for from and rcpt config lines
1.1.7:	
	Read the queue Id at envfrom stage, else we miss it there.
1.1.6:
	Only log debug messages when verbose mode is enabled
	Bugfix: libspf_alt use was not thread safe.
	Reorder tests to minimize DNS lookups with SPF
	Buygfix: when using a delay in config file, we overwrote some memory
	Fix build problems on Linux
1.1.5:	
	Bugfix: the dumpfile was not set correctly on command line
	Bugfix: correctly reset defaults before reloading the config
	Clear a warning on Solaris build
	Bugfix: The subnet match mask was not set in the configuration file
1.1.4:
	Better libspf testing in configure
	Add flag equivalents to the config file
1.1.3:
	Bugfix: without SPF enabled, everything was accepted
1.1.2:
	SPF support with libspf_alt
1.1.1:
	Added a -P pidfile option to dump PID to a file
	smfi_getsymval does not set errno, so don't display strerror
	SMTP AUTH support
	Accept any e-mail address as specified in RFC 2821 from config and dump
	Add a -L flag for subnet matching (ad-hoc hack for MTA farms)
	Use setsid() to detach from the terminal
	Fix the mising units in ps output for -a and -w
	Fix typos

1.0: First stable release