@@ -1,0 +1,83 @@
+#!/bin/sh
+# $Id: rc-linux.sh.in,v 1.1 2004/04/03 09:26:11 manu Exp $
+#  init file for milter-greylist
+#
+# chkconfig: - 50 50
+# description: Milter Greylist Daemon
+#
+# processname: @BINDIR@/milter-greylist
+# config: /etc/mail/greylist.conf
+# pidfile: /var/run/milter-greylist.pid
+
+# source function library
+. /etc/init.d/functions
+
+pidfile="/var/run/milter-greylist.pid"
+socket="/var/milter-greylist/milter-greylist.sock"
+user="smmsp"
+OPTIONS="-P $pidfile -u $user -p $socket"
+RETVAL=0
+prog="Milter-Greylist"
+
+start() {
+        echo -n $"Starting $prog: "
+        if [ $UID -ne 0 ]; then
+                RETVAL=1
+                failure
+        else
+                daemon @BINDIR@/milter-greylist $OPTIONS
+                RETVAL=$?
+                [ $RETVAL -eq 0 ] && touch /var/lock/subsys/milter-greylist
+        fi;
+        echo 
+        return $RETVAL
+}
+
+stop() {
+        echo -n $"Stopping $prog: "
+        if [ $UID -ne 0 ]; then
+                RETVAL=1
+                failure
+        else
+                killproc @BINDIR@/milter-greylist
+                RETVAL=$?
+                [ $RETVAL -eq 0 ] && rm -f /var/lock/subsys/milter-greylist
+        fi;
+        echo
+        return $RETVAL
+}
+
+
+restart(){
+	stop
+	start
+}
+
+condrestart(){
+    [ -e /var/lock/subsys/milter-greylist ] && restart
+    return 0
+}
+
+case "$1" in
+  start)
+	start
+	;;
+  stop)
+	stop
+	;;
+  restart)
+	restart
+        ;;
+  condrestart)
+	condrestart
+	;;
+  status)
+        status milter-greylist
+	RETVAL=$?
+        ;;
+  *)
+	echo $"Usage: $0 {start|stop|status|restart|condrestart}"
+	RETVAL=1
+esac
+
+exit $RETVAL
