@@ -1,4 +1,6 @@
 1.1.10:
+	Initialisation scripts
+	Write the pidfile before changing UID (/var/run is not world-writable)
 	Add a config option to suprress the X-Greylist header
 1.1.9:
 	Build problems on some Linux systems
